--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -718,7 +718,8 @@ p a {
 }
 
 blockquote {
-  font-size: 1.6em;
+  font-size: 1.0em;
+  font-style: italic;
   border-left: 10px solid #e9e9e9;
   margin-bottom: 20px;
   padding: 0 0 0 30px;
