Added new fonts
gill sans and gravity variants for header consideration

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -20,6 +20,30 @@ body {
   margin: 0;
 }
 
+@font-face {
+	font-family: 'gillsans';
+	font-style: normal;
+	font-weight: 400;
+	src: local('gillsans'), local('gill sans'),
+		 url('fonts/gillsans.ttf') format('truetype');
+}
+
+@font-face {
+	font-family: 'Gravity-Light';
+	font-style: normal;
+	font-weight: 400;
+	src: local('gravity-light'), local('Gravity-Light'),
+		 url('fonts/Gravity-Light.ttf') format('truetype');
+}
+
+@font-face {
+	font-family: 'Gravity-UltraLight-Italic';
+	font-style: normal;
+	font-weight: 400;
+	src: local('gravity-ultralight-italic'), local('Gravity-UltraLight-italic'),
+		 url('fonts/Gravity-UltraLight-Italic.ttf') format('truetype');
+}
+
 /* HTML5 display definitions
    ========================================================================== */
 
@@ -450,7 +474,7 @@ a:hover {
 header {
   padding-top: 40px;
   padding-bottom: 40px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family:  Gravity-UltraLight-Italic, Gravity-Light, 'Helvetica Neue', Helvetica, Arial, serif;
   background: #2e7bcf url(../images/header-bg.jpg) 0 0 repeat-x;
   border-bottom: solid 1px #275da1;
 }
@@ -524,7 +548,7 @@ a.button {
   color: #fff;
   padding-left: 68px;
   padding-top: 22px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: 'Helvetica Neue', Helvetica, Arial, serif;
 }
 a.button small {
   display: block;
@@ -612,7 +636,7 @@ form {
 /* GENERAL ELEMENT TYPE STYLES */
 
 #main-content h1 {
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: 'Helvetica Neue', Helvetica, Arial, serif;
   font-size: 2.8em;
   font-weight: normal;
   letter-spacing: -1px;
@@ -630,7 +654,7 @@ form {
 }
 
 #main-content h2 {
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: 'Helvetica Neue', Helvetica, Arial, serif;
   font-size: 22px;
   font-weight: bold;
   margin-bottom: 8px;
@@ -645,7 +669,7 @@ form {
 }
 
 #main-content h3 {
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: 'Helvetica Neue', Helvetica, Arial, serif;
   font-size: 18px;
   font-weight: bold;
   margin-top: 24px;
@@ -662,7 +686,7 @@ form {
 }
 
 #main-content h4 {
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: 'Helvetica Neue', Helvetica, Arial, serif;
   font-size: 15px;
   font-weight: bold;
   margin-bottom: 8px;
@@ -678,7 +702,7 @@ h4:before {
 }
 
 #main-content h5 {
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: 'Helvetica Neue', Helvetica, Arial, serif;
   font-size: 14px;
   margin-bottom: 8px;
   color: #474747;
@@ -692,7 +716,7 @@ h5:before {
 }
 
 #main-content h6 {
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-family: 'Helvetica Neue', Helvetica, Arial, serif;
   font-size: .8em;
   margin-bottom: 8px;
   color: #474747;
